--- a/Intro_to_ML_Kaggle.ipynb
+++ b/Intro_to_ML_Kaggle.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Intro to ML_Kaggle.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPfzgQLf7ALqhYHOAd+wWG1",
+      "authorship_tag": "ABX9TyPrbgueF49eobx0hi/BPs1X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,8 +381,36 @@
       "source": [
         "X = melbourne_data[melbourne_features]"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8CHP5Neg1GPB",
+        "outputId": "7f18e28e-b52d-4491-a347-6d7da6ab31a0"
+      },
+      "source": [
+        "for col in X.columns:\n",
+        "  print(col)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Rooms\n",
+            "Bathroom\n",
+            "Landsize\n",
+            "Lattitude\n",
+            "Longtitude\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -392,7 +420,7 @@
           "height": 300
         },
         "id": "XfjgazA7p70s",
-        "outputId": "d98fd584-c010-47a2-f750-9a513d9963bf"
+        "outputId": "a45d56c3-9fc6-44f7-b457-3c10e3fc4d63"
       },
       "source": [
         "X.describe()"
@@ -724,7 +752,7 @@
         "outputId": "46b9193f-1147-45cb-d29d-21a40333efdf"
       },
       "source": [
-        "# print the list of columns in the dataset\n",
+        "# print the list of columns in the datasets\n",
         "for col in melbourne_data.columns:\n",
         "  print(col)"
       ],
